<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_song_playlist"
    android:visibility="invisible"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_add_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_song_to_playlist"
        android:background="@null"
        android:src="@drawable/ic_add_playlist_detail"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_song"
        android:textColor="@color/color_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty__song_playlist_sub"
        android:textColor="@color/color_gray"
        android:textSize="14sp" />
</LinearLayout>
