<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/HHHHHHH">

        <ImageButton
            android:layout_marginTop="10dp"
            android:contentDescription=" "
            android:layout_alignParentLeft="true"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_close_dialog_playlist"/>
        <ImageButton
            android:layout_marginTop="10dp"
            android:id="@+id/close_button"
            android:contentDescription="@string/close_button"
            android:layout_alignParentLeft="true"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_close_dialog_playlist"/>
        <TextView
            android:layout_toRightOf="@id/close_button"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="50dp"
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:gravity="center"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rename_playlist"
            android:textColor="@color/color_white" />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_below="@id/intro"
            android:id="@+id/suggestion"
            android:textSize="14sp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_your_playlist"
            android:textColor="@color/color_white" />
        <FrameLayout
            android:id="@+id/frame"
            android:layout_marginTop="50dp"
            android:layout_below="@id/suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_pl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_place_holder"
                android:contentDescription="@string/hint_text_rename_playlist"
                android:cursorVisible="true"
                android:fontFamily="sans-serif"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingRight="@dimen/_32sdp"
                android:singleLine="true"
                android:textColor="@color/color_white" />

            <ImageButton
                android:background="?selectableItemBackgroundBorderless"
                android:id="@+id/clear_text"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/clear_all"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_close_text" />

        </FrameLayout>


        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_below="@id/frame"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:textAllCaps="false"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_marginRight="50dp"
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/color_white" />

            <androidx.appcompat.widget.AppCompatButton
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="false"
                android:background="?selectableItemBackgroundBorderless"
                android:id="@+id/btn_update"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/update"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
