<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/background_feedback"
    android:id="@+id/HHHHHHH">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:text="@string/delete_playlits"
        android:textColor="@color/color_white" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@id/intro"
        android:id="@+id/suggestion"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:text="@string/you_can_not_action"
        android:textColor="@color/color_gray" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/suggestion"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_marginRight="50dp"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_white" />

        <androidx.appcompat.widget.AppCompatButton
            app:cornerRadius="5dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:background="@drawable/background_button_delete"
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/delete"
            android:textColor="@color/color_white" />
    </LinearLayout>
</RelativeLayout>