<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_feedback"
        android:backgroundTint="@color/colorPrimary"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/relation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/tell_impro">

            <TextView
                android:id="@+id/intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:importantForAccessibility="no"
                android:text="@string/tell_impro"
                android:ellipsize="end"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relation"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/give_feedback"
            android:textColor="#80FFFFFF"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/suggestion"
            android:backgroundTint="@color/color_place_holder"
            android:contentDescription="@string/hint_text_feedback"
            android:cursorVisible="false"
            android:fontFamily="sans-serif"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="4"
            android:maxLines="4"
            android:textColor="@color/color_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_fb"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="50dp"
                android:background="?selectableItemBackgroundBorderless"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?selectableItemBackgroundBorderless"
                android:enabled="false"
                android:fontFamily="sans-serif-medium"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
